--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@hashgraph/sdk": "^2.12.0",
+    "@hashgraph/sdk": "2.11",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.7"
   },
