--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hashgraph/sdk": "2.11",
+    "@nuxtjs/dotenv": "^1.4.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.7"
   },
