--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-# .env
+.env
+/hedera/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
