--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "core-js": "^3.19.3",
     "fs": "^0.0.1-security",
+    "hashconnect": "^0.1.9",
     "nuxt": "^2.15.7",
     "solc": "^0.8.8"
   },
